# nt61-rs

./: .gitignore  LICENSE
nt61/: .gitignore  Cargo.toml  Makefile  README.md
nt61/resources/bat/: autoexec.bat
nt61/resources/fonts/oldschool-pc-fonts/: LICENSE.txt
nt61/resources/fonts/open-sans/: LICENSE.txt
nt61/resources/fonts/source-code-pro/: LICENSE.txt
nt61/src/: README.md  boot_types.rs  kernel_main.rs  lib.rs  main.rs
nt61/src/arch/: boot.rs  mod.rs
nt61/src/arch/aarch64/: apic.rs  context.rs  context_switch.rs  cpuinfo.rs  exception.rs  framebuffer.rs  gdt.rs  hpet.rs  idt.rs  keyboard.rs  mod.rs  paging.rs  paging_impl.rs  percpu_impl.rs  pic.rs  pit.rs  serial.rs  smp.rs  soc.rs  syscall.rs  trap.rs  user_entry.rs
nt61/src/arch/common/: mod.rs  paging.rs  percpu.rs  smp.rs  trap_frame.rs  user_entry.rs
nt61/src/arch/loongarch64/: apic.rs  context.rs  context_switch.rs  cpuinfo.rs  cpuinfo_core.rs  exception_stack.rs  fpu.rs  framebuffer.rs  gdt.rs  hpet.rs  idt.rs  keyboard.rs  mod.rs  paging.rs  paging_impl.rs  percpu_impl.rs  pic.rs  pit.rs  serial.rs  smp.rs  soc.rs  syscall.rs  trap.rs  user_entry.rs
nt61/src/arch/riscv64/: apic.rs  clint.rs  context.rs  context_switch.rs  cpuinfo.rs  csr.rs  fpu.rs  framebuffer.rs  gdt.rs  hpet.rs  idt.rs  keyboard.rs  mod.rs  paging.rs  paging_impl.rs  percpu_impl.rs  pic.rs  pit.rs  plic.rs  sbi.rs  serial.rs  smp.rs  soc.rs  sv48.rs  syscall.rs  trap.rs  user_entry.rs
nt61/src/arch/x86_64/: boot_anim.rs  context.rs  context_switch.rs  debug.rs  dispatch.rs  dynamic_paging.rs  fpu.rs  gdt.rs  idt.rs  idt_stubs.rs  mod.rs  msr.rs  ntoskrnl_handoff.rs  paging.rs  paging_impl.rs  percpu_impl.rs  smp.rs  smp_trampoline.S  syscall.rs  syscall_numbers.rs  syscall_nums.rs  tss.rs  user_entry.rs
nt61/src/boot/: Cargo.toml  README.md  build.rs  linker-la64.ld  linker-rv64.ld  linker.ld  loongarch64-uefi.json
nt61/src/boot/.cargo/: config.toml
nt61/src/boot/src/: bcd.rs  bcd_mailbox.rs  bcd_parser.rs  bcd_registry.rs  bcd_types.rs  boot_ui.rs  ext4_boot.rs  fat_lfn.rs  file.rs  font.rs  font_ttf.rs  graphics.rs  lib.rs  loader.rs  loading.rs  main.rs  main_test.rs  memdiag_ui.rs  menu.rs  nvram.rs  renderer.rs
nt61/src/desktop/: mod.rs
nt61/src/desktop/aero/: mod.rs
nt61/src/desktop/applications/: mod.rs
nt61/src/desktop/dwm/: mod.rs
nt61/src/drivers/: loader.rs  mod.rs  pe.rs  smoke.rs
nt61/src/drivers/arch/: mod.rs
nt61/src/drivers/audio/: ac97.rs  intel_hda.rs  mod.rs  smoke.rs
nt61/src/drivers/bootvid/: mod.rs
nt61/src/drivers/bus/: acpi_bus.rs  mod.rs  pci_bus.rs  pnp.rs  usb_bus.rs
nt61/src/drivers/ci/: mod.rs
nt61/src/drivers/clfs/: container.rs  context.rs  fcb.rs  format.rs  io.rs  metadata.rs  mod.rs  record.rs  smoke.rs  vcb.rs
nt61/src/drivers/fileinfo/: mod.rs
nt61/src/drivers/fltmgr/: mod.rs
nt61/src/drivers/input/: i8042.rs  mod.rs  smoke.rs  usb_hid_kbd.rs  usb_hid_mouse.rs
nt61/src/drivers/kdcom/: mod.rs
nt61/src/drivers/ksec/: mod.rs
nt61/src/drivers/ndis/: miniport.rs  mod.rs  ndis6.rs  smoke.rs
nt61/src/drivers/net/: e1000.rs  mod.rs  rtl8139.rs  smoke.rs  virtio_net.rs
nt61/src/drivers/partmgr/: mod.rs
nt61/src/drivers/pcw/: mod.rs
nt61/src/drivers/pshed/: mod.rs
nt61/src/drivers/spldr/: mod.rs
nt61/src/drivers/storage/: ahci.rs  ata.rs  atapi.rs  ataport.rs  block.rs  disk.rs  mod.rs  nvme.rs  ramdisk.rs  scsi.rs  smoke.rs  storport.rs
nt61/src/drivers/timer/: acpi_pm.rs  hpet.rs  mod.rs  smoke.rs
nt61/src/drivers/usb/: ehci.rs  hid.rs  hub.rs  mod.rs  smoke.rs  uhci.rs  xhci.rs
nt61/src/drivers/video/: bochs_vbe.rs  dp_aux.rs  edid.rs  efifb.rs  hdcp.rs  i2c_ddc.rs  log.rs  mod.rs  smoke.rs  vga.rs
nt61/src/drivers/volmgr/: mod.rs
nt61/src/drivers/volsnap/: mod.rs
nt61/src/drivers/wdf/: device.rs  kmdf.rs  mod.rs  queue.rs  smoke.rs
nt61/src/fs/: mod.rs  smoke.rs  windows_paths.rs
nt61/src/fs/ext2/: bitmap.rs  dir.rs  extent.rs  group.rs  inode.rs  journal.rs  mod.rs  superblock.rs
nt61/src/fs/fat32/: mod.rs  pagefile.rs
nt61/src/fs/ntfs/: mod.rs  pagefile.rs  security.rs
nt61/src/fs/refs/: btree.rs  chunk.rs  integrity.rs  mod.rs  object.rs  superblock.rs
nt61/src/hal/: hal_export.rs  mod.rs
nt61/src/io/: dispatch.rs  iocomplete.rs  mod.rs  smoke.rs
nt61/src/ke/: apc.rs  bugcheck.rs  dispatch.rs  dpc.rs  exception.rs  interrupt.rs  irql.rs  memdiag.rs  mod.rs  psss.rs  safe_mode_shell.rs  scheduler.rs  shadow_ssdt.rs  smoke.rs  spinlock.rs  ssdt.rs  sync.rs  time.rs  timer.rs
nt61/src/libs/: mod.rs  smoke.rs
nt61/src/loader/: mod.rs  pe32.rs
nt61/src/lpc/: mod.rs  smoke.rs
nt61/src/mm/: access_fault.rs  constants.rs  cow.rs  dynamic_paging.rs  frame.rs  heap.rs  hiber.rs  hyperspace.rs  logging.rs  mdl.rs  memtest.rs  mod.rs  pagefile.rs  pager.rs  perf.rs  pfn.rs  pool.rs  pte.rs  smoke.rs  syspte.rs  syspte_stub.rs  vad.rs  vas.rs  vm.rs  working_set.rs  writer.rs  zeropage.rs
nt61/src/netstack/: arp.rs  dhcp.rs  eth.rs  ethif.rs  icmp.rs  ipif.rs  ipv4.rs  ipv6.rs  mod.rs  socket.rs  tcp.rs  udp.rs
nt61/src/ob/: mod.rs  smoke.rs  types.rs
nt61/src/pegen/: mod.rs
nt61/src/ps/: mod.rs  process.rs  smoke.rs  thread.rs  wow64_process.rs  wow64_thread.rs
nt61/src/registry/: cm.rs  hive.rs  mod.rs  path.rs  reg.rs
nt61/src/rtl/: klog.rs  logging.rs  mod.rs  panic.rs  string.rs  testing.rs  unicode.rs  windows_log.rs
nt61/src/se/: acl.rs  mod.rs  seaccess.rs  sid.rs  token.rs
nt61/src/servers/: cmd.rs  csrss.rs  mod.rs  pid1.rs  pid2.rs  services.rs  smoke.rs  smss.rs  wininit.rs  winlogon.rs
nt61/src/system_image/: mod.rs
nt61/src/userspace/: cmd.rs  crt.rs  csrss.rs  find.rs  loader.rs  lsass.rs  minimal_stub.rs  mod.rs  more.rs  peb_teb.rs  services.rs  smss.rs  stack.rs  user_params.rs  winlogon.rs
nt61/src/winload/: Cargo.toml  linker-la64.ld
nt61/tools/: Cargo.toml
nt61/tools/cmd-stub-gen/: Cargo.toml
nt61/tools/src/: build_esp.rs  error.rs  hive_gen.rs  hive_gen_bin.rs  lib.rs  logger.rs  main.rs  pe_test.rs  regf.rs
nt61/tools/tests/: multi_fs_smoke.rs  qcow2_image_tests.rs
(+332 files in other folders)
