[package]
name = "nt61-tools"
version = "0.1.0"
edition = "2021"
description = "NT6.1.7601 build tools - Create disk images without shell dependencies"
publish = false

[[bin]]
name = "build-tool"
path = "src/main.rs"

# build-esp 已删除：不再生成 in-memory 系统 PE 镜像。
# 真实的 ntoskrnl.exe / hal.dll / drivers 来自 Windows 7 ISO 解压后写入 disk.img。

# pe-test 已删除（依赖 nt61::system_image::build_all）。

# hive-gen 需要 nt61
[[bin]]
name = "hive-gen"
path = "src/hive_gen_bin.rs"
required-features = ["with-nt61"]

[lib]
name = "nt61_tools"
path = "src/lib.rs"

[dependencies]
# nt61 is an optional dependency for kernel integration
nt61 = { path = "..", optional = true }
# hive_gen is always available
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
tempfile = { version = "3.8", optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
testing = ["tempfile"]
with-nt61 = ["nt61", "tempfile"]
